# baisline

./: .gitignore  pyproject.toml
baisline/: __init__.py  budget.py  exceptions.py  reports.py  strategy.py  trainer.py  visualize.py
baisline/profiler/: __init__.py  base.py  protocol.py  pytorch.py
baisline/profiler/cpu/: likwid.py  perf.py
baisline/profiler/memory/: cupti.py
testcases/: compare_models.py  custom_loop.py  hf_transformer.py  manual_api.py  mnist_flops_vs_loss.py  simple_mlp.py
tests/: hf_transformer.py  manual_api.py  mnist_flops_vs_loss.py  simple_mlp.py
